--- a/weather-fast-api-poc/pyproject.toml
+++ b/weather-fast-api-poc/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.85.2"
+httpx = "^0.28.1"
 uvicorn = {extras = ["standard"], version = "^0.19.0"}
 
 [tool.poetry.group.dev.dependencies]
